--- a/KLS_WEB/KLS_WEB/Views/Catalogs/Airlines/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/Airlines/Index.cshtml
@@ -27,6 +27,10 @@
             <thead>
                 <tr>
                     <th>Nombre</th>
+                    <th>Nombre</th>
+                    <th>Nombre</th>
+                    <th>Nombre</th>
+                    <th>Nombre</th>
                     <th>Teléfonos</th>
                     <th>Dept.</th>
                     <th>Contactos</th>
@@ -39,8 +43,8 @@
             </thead>
             <tbody id="table-info"></tbody>
         </table>
-
     </div>
+
 </div>
 
 <!--Modal global-->
@@ -187,6 +191,10 @@
                     $("#table-info").append(`
                              <tr>
                                 <td>${nCon(key.nombre)}</td>
+<td>${nCon(key.nombre)}</td>
+<td>${nCon(key.nombre)}</td>
+<td>${nCon(key.nombre)}</td>
+<td>${nCon(key.nombre)}</td>
                                 <td>${nCon(key.telefono)}</td>
                                 <td>${nCon(key.departamento)}</td>
                                 <td>${nCon(key.contactos)}</td>
