--- a/KLS_WEB/KLS_WEB/Views/Security/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Security/Index.cshtml
@@ -4,20 +4,36 @@
 <div class="data-content p-4 text-left">
     @*<div class="title font-barlow">Seguridad</div>*@
     <div class="p-4">
-        <div class="text-left d-flex mb-3">
-            @*<a href="/Catalogs">
-                    <div class="material-icons icon-red">arrow_back</div>
-                </a>*@
-            <div class="text-uppercase poppins medium size-24 pl-2">SEGURIDAD</div>
-            <div style="padding-left:20%;">
-                <button class="btn btn-sm btn-dark" onclick="showModal('AGREGAR','Agregar');">
+        <!--<div class="text-left d-flex mb-3">-->
+        @*<a href="/Catalogs">
+            <div class="material-icons icon-red">arrow_back</div>
+        </a>*@
+        <!--<div class="text-uppercase poppins medium size-24 pl-2">SEGURIDAD</div>
+        <div style="padding-left:20%;">
+            <button class="btn btn-sm btn-dark" onclick="showModal('AGREGAR','Agregar');">
+                <span class="material-icons">
+                    add
+                </span>
+            </button>
+        </div>
+    </div>-->
+        <div class="d-flex flex-nowrap">
+            <div class="p-2">
+                <div class="text-left d-flex">
+                    @*<a href="/Catalogs">
+                        <div class="material-icons icon-red">arrow_back</div>
+                    </a>*@
+                    <div class="text-uppercase poppins medium size-24 pl-2">SEGURIDAD</div>
+                </div>
+            </div>
+            <div class="ml-auto p-2">
+                <button class="btn btn-sm" onclick="showModal('AGREGAR','Agregar');">
                     <span class="material-icons">
                         add
                     </span>
                 </button>
             </div>
         </div>
-
         <div class="p-4 shadow bg-white">
             <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="100%">
                 <thead>
@@ -28,7 +44,7 @@
                         <th>A. materno</th>
                         <th>Correo</th>
                         <th>Estatus</th>
-                        <th style="width:5%;">Acciones</th>
+                        <th style="width:3%;" class="text-center">Acciones</th>
                     </tr>
                 </thead>
                 <tbody id="table-info"></tbody>
@@ -83,6 +99,7 @@
 </div>
 @section Scripts{
     <script>
+        var dataSeguridad = [];
         $(document).ready(function () {
             loadTable();
             $("#frmRegister").submit(function (event) {
@@ -116,8 +133,8 @@
             stable.destroy();
             $("#table-info").empty();
             $.get("Security/getSecurity", function (res) {
-                dataUnidades = res;
-                console.log(dataUnidades);
+                dataSeguridad = res;
+                console.log(dataSeguridad);
                 let i = 0;
                 $.each(res, function (item, key) {
                     i++;
@@ -129,7 +146,7 @@
                             <td>${nCon(key.amaterno)}</td>
                             <td>${nCon(key.email)}</td>
                             <td>`+ statusTable(key.estatus) + `</td>
-                            <td>
+                            <td class="text-center">
                                 <a href="#">
                                     <span class="material-icons" onclick="showModal('EDITAR','Editar',${nCon(key.id)});">
                                         mode_edit
