--- a/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
@@ -185,8 +185,12 @@
                             <span>Precio Cliente</span>
                         </div>
                         <div class="d-flex flex-column">
-                            <b id="costos">0.00</b>
-                            <b id="preciocliente">0.00</b>
+                            <div>
+                                $<b id="costos">0.00</b>
+                            </div>
+                            <div>
+                                $<b id="preciocliente">0.00</b>
+                            </div>
                         </div>
                     </div>
                     <button class="btn btn-dark col-12 mt-4 guardar">Guardar</button>
@@ -402,105 +406,6 @@
                 dSelect('ruta');
             });
         };
-
-        function setPrecios() {
-            const precios = $('.precios');
-            let total = 0;
-            precios.map(index => {
-                const cantidad = Number.isNaN(Number.parseFloat(precios.eq(index).val())) ? 0 : precios.eq(index).val();
-                total += parseFloat(cantidad);
-            });
-            total = parseFloat(total).toFixed(2);
-            $('#preciocliente').text(`$${total}`);
-        }
-
-        function setCostos() {
-            const costos = $('.costos');
-            let total = 0;
-            costos.map(index => {
-                const cantidad = Number.isNaN(Number.parseFloat(costos.eq(index).val())) ? 0 : costos.eq(index).val();
-                total += parseFloat(cantidad);
-            });
-            total = parseFloat(total).toFixed(2);
-            $('#costos').text(`$${total}`);
-        }
-
-        function getEquipos() {
-            const length = --$('.selectequipo').length;
-            let data = ``;
-            i = 0;
-            while (i <= length) {
-                const select = document.getElementsByClassName('selectequipo')[i],
-                    options = select.options;
-                data += `${i !== 0 ? '&' : ''}${select.name}=${options[options.selectedIndex].value}`;
-                ++i;
-            }
-            return data;
-        }
-
-        function getUnidades() {
-            const length = --$('.selectunidad').length;
-            let data = ``;
-            i = 0;
-            while (i <= length) {
-                const select = document.getElementsByClassName('selectunidad')[i],
-                    options = select.options;
-                data += `${i !== 0 ? '&' : ''}${select.name}=${options[options.selectedIndex].value}`;
-                ++i;
-            }
-            return data;
-        }
-
-        selectEquipo = (IdTransportista, IdTipoUnidad, selectid) => {
-            $.get(`/Carriers/Inventory/GetEquipos/${IdTransportista}`, ({ dataReport }) => {
-                const equipos = dataReport.filter(x => x.tipoUnidad == IdTipoUnidad);
-                $(`#equipo${selectid}`).empty();
-                if (equipos.length > 0) {
-                    equipos.map(({ id, marca, modelo, placa }) => {
-                        $(`#equipo${selectid}`).append(`<option value="${id}">${marca}, ${modelo}. PLACA: ${placa}</option>"`);
-                    });
-                } else {
-                    $(`#equipo${selectid}`).append(`<option value="0">No existen unidades activas</option>"`);
-                }
-            });
-        }
-
-        getInventario = (IdTransportista, elementId) => {
-            $.get(`/Carriers/Inventory/GetEquipos/${IdTransportista}`, res => {
-                const { unidades } = res;
-                if (unidades.length > 0) {
-                    unidades.map(({ tipoUnidad, nombre }) => {
-                        $(`#unidad${elementId}`).append(`<option value="${tipoUnidad}">${nombre[0]}</option>"`);
-                    });
-                    selectEquipo(IdTransportista, unidades[0].tipoUnidad, elementId);
-                } else {
-                    $('.selectunidad').append(`<option value="0">No existen unidades activas</option>"`);
-                    $('.selecUrlequipo').append(`<option value="0">No existen equipos activos</option>"`);
-                }
-            });
-        };
-
-        function addEquipo(servicio, element) {
-            const boton = jQuery(element);
-            const idtransportista = $('#transportista').val();
-            const elementid = $('.equipocontainer').children().length;
-            $('.equipocontainer').attr('rel', idtransportista);
-            boton.remove();
-
-            const equipo = `<div class="d-flex justify-content-between equipo mt-2">
-                <select id="unidad${elementid}" class="form-control form-control-sm col-4 selectunidad" name="unidad${servicio}" required onchange="{selectEquipo(${idtransportista}, this.value, ${elementid});}">
-                </select>
-                <div class="col-8 d-flex flex-row justify-content-between">
-                    <select id="equipo${elementid}" class="form-control form-control-sm col-10 selectequipo" name="equipo${servicio}" required>
-                    </select>
-                    <i class="material-icons text-danger" style="cursor: pointer;" onClick="{$(this).parent().parent().remove();}">delete</i>
-                </div>
-            </div>
-            <i class="material-icons" style="cursor:pointer;" onclick="addEquipo('${servicio}', this);">add_box</i>`;
-
-            $('.equipocontainer').append(equipo);
-            getInventario(idtransportista, elementid);
-        }
 
     function agregarCiudad(element) {
         $('#modalAgregarCiudad').modal('show');
